tekton-greeting-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tekton-greeting-service
spec:
  selector:
    app: tekton-greeting-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8088
      nodePort: 30006
  type: NodePort
